2013-10-25  Siddhesh Poyarekar  <siddhesh@redhat.com>

	[BZ #16072]
	* sysdeps/posix/getaddrinfo.c (gethosts): Allocate tmpbuf on
	heap for large requests.

2013-09-02  Joseph Myers  <joseph@codesourcery.com>

	[BZ #14155]
	* sysdeps/ieee754/flt-32/e_jnf.c (__ieee754_jnf): Use double for
	intermediate calculations in recurrence.
	(__ieee754_ynf): Likewise.
	* math/libm-test.inc (jn_test_data): Do not allow spurious
	underflow exception.  Add more tests.
	(yn_test_data): Add more tests.
	* sysdeps/i386/fpu/libm-test-ulps: Update.
	* sysdeps/x86_64/fpu/libm-test-ulps: Likewise.

2013-08-29  Thomas Schwinge  <thomas@codesourcery.com>

	[BZ #15522] strtod ("nan(N)") returning a sNaN in some cases

	* stdlib/strtof_l.c (SET_MANTISSA): Rewrite.
	* stdlib/strtod_l.c (SET_MANTISSA): Likewise.
	* sysdeps/ieee754/ldbl-64-128/strtold_l.c (SET_MANTISSA):
	Likewise.
	* sysdeps/ieee754/ldbl-96/strtold_l.c (SET_MANTISSA): Likewise.
	* sysdeps/ieee754/ldbl-128/strtold_l.c (SET_MANTISSA): Likewise.
	* sysdeps/ieee754/ldbl-128ibm/strtold_l.c (SET_MANTISSA):
	Likewise.
	* sysdeps/ieee754/ldbl-128ibm/ieee754.h
	(ibm_extended_long_double): Add ieee_nan member.
	* stdlib/tst-strtod6.c (test): New function, renamed from do_test.
	(do_test): New function.

	* math/basic-test.c (TEST_CONVERT): New macro, renamed from
	TEST_TRUNC.
	(convert_dfsf_test, convert_tfsf_test, convert_tfdf_test): New
	functions, renamed from truncdfsf_test, trunctfsf_test,
	trunctfdf_test.
	(convert_sfdf_test, convert_sftf_test, convert_dftf_test): New
	functions.
	(do_test): Run all these.

2013-08-23  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15532]
	* math/s_cexp.c (__cexp): Return NaN + i0 for NaN + i0 argument.
	* math/s_cexpf.c (__cexpf): Likewise.
	* math/s_cexpl.c (__cexpl): Likewise.
	* math/libm-test.inc (cexp_test_data): Correct expected return
	value for NaN + i0.  Add another test.

2013-08-21  Joseph Myers  <joseph@codesourcery.com>

	[BZ #15797]